--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.roskenet</groupId>
   <artifactId>springboot-javafx-test</artifactId>
-  <version>1.3.0-gp</version>
+  <version>1.3.0-gp2</version>
 
   <name>springboot-javafx-test</name>
   <description>Test support for Spring Boot and JavaFX 8</description>
@@ -13,9 +13,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <springframework.version>5.0.0.RELEASE</springframework.version>
+    <!--  <springframework.version>5.0.0.RELEASE</springframework.version> -->
     <springboot-javafx-support.version>2.1.5</springboot-javafx-support.version>
-    <springboot.version>2.0.0.RELEASE</springboot.version>
+    <spring-boot.version>2.0.1.RELEASE</spring-boot.version>
     <testfx.version>4.0.5-alpha</testfx.version>
     <!--  <monocle.version>8u20-b26</monocle.version> -->
     <monocle.version>8u76-b04</monocle.version>
@@ -53,6 +53,19 @@
 	</repository>
   </repositories>
   
+  	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<!-- Import dependency management from Spring Boot -->
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring-boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+  
   
   <dependencies>
     <dependency>
@@ -64,7 +77,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>${springframework.version}</version>
+      <!--  <version>${springframework.version}</version> -->
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -73,11 +86,13 @@
       <version>${springboot-javafx-support.version}</version>
       <scope>provided</scope>
     </dependency>
+<!-- 
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <version>${springboot.version}</version>
     </dependency>
+-->
     <dependency>
       <groupId>org.testfx</groupId>
       <artifactId>testfx-core</artifactId>
@@ -93,6 +108,14 @@
       <artifactId>openjfx-monocle</artifactId>
       <version>${monocle.version}</version>
       <!-- <version>8u76-b04</version> Doesn't work with 4.0.5-alpha yet. -->
+    </dependency>
+     <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+    </dependency>
+     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
     </dependency>
   </dependencies>
 
